// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contribution /> should render with both answers 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  width: 100%;
}

.c0 {
  padding: 0.625rem 1.25rem;
  background: white;
}

.c2 {
  margin: 1.25rem 0;
  padding: 0.625rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <section
    class="c0"
    style="margin-bottom: 20px;"
  >
    <h2>
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section>
    <h2>
      Que dit votre convention collective ?
    </h2>
    <div
      class="c1 c2"
    >
      
      <p>
        Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
      </p>
      <input
        class="c3"
        placeholder="Nom d'entreprise, SIRET, nom de convention collective"
        role="search"
        type="search"
        value=""
      />
      
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with conventions answer 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  width: 100%;
}

.c1 {
  margin: 1.25rem 0;
  padding: 0.625rem;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <section>
    <h2>
      Que dit votre convention collective ?
    </h2>
    <div
      class="c0 c1"
    >
      
      <p>
        Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
      </p>
      <input
        class="c2"
        placeholder="Nom d'entreprise, SIRET, nom de convention collective"
        role="search"
        type="search"
        value=""
      />
      
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with generic answer 1`] = `
.c0 {
  padding: 0.625rem 1.25rem;
  background: white;
}

<div>
  <section
    class="c0"
    style="margin-bottom: 20px;"
  >
    <h2>
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with no answer 1`] = `<div />`;
